@@ -1,3 +1,12 @@
 # ASCII ART
 
-Program with interface to easily convert image to ASCII art.
+<h2>Program with interface to easily convert image to ASCII art.</h2>
+
+
+To run the program on intellIJ, you have to add javafx control module to the project:
+Run > Edit Configurations > VM options > then add 
+
+<code>--module-path [PATH OF YOUR JAVAFX LIBRARY]/lib --add-modules javafx.controls</code>
+
+<h3>Linux</h3> 
+To run the program on Linux, go to <code>out/artifacts/ASCII_ART_jar</code> and run <code>run.sh</code>. 
